--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.49.3",
     "react-native-config": "^0.6.0",
     "react-native-drawer": "^2.3.0",
+    "react-native-fontawesome": "^5.7.0",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-svg": "^5.4.1",
     "react-native-vector-icons": "^4.4.2",
